<resources>
    <string name="app_name">ClouM</string>
    <string name="app_name1">ClouM</string>
    <string name="txt_already_have_an_account">"Already have an account ? "</string>
    <string name="txt_login">Login</string>
    <string name="lbl_dialog_registration_completed">Registration Completed</string>
    <string name="lbl_dialog_registration_failed">Registration Fail</string>
    <string name="lbl_dialog_password_changed">Password Changed</string>
    <string name="lbl_dialog_successfully">Successfully</string>
    <string name="lbl_dialog_try_again">Try Again..</string>
    <string name="lbl_dialog_error_inchanging_password">Error in Changing Password</string>
    <string name="login_screen_forgot_password">Forgot password ?</string>
    <string name="txt_don_t_have_account">"Don\'t have any account ? "</string>
    <string-array name="vital_period">
        <item>@string/lbl_all</item>
        <item>@string/lbl_week</item>
        <item>@string/lbl_month</item>
        <item>@string/lbl_year</item>
    </string-array>
    <string name="lbl_all">All</string>
    <string name="lbl_week">Week</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_year">Year</string>
    <string-array name="height_ft">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="height_inch">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="medicine_dosagetype_array">
        <item>mg</item>
        <item>gm</item>
        <item>tsf</item>
        <item>u</item>
        <item>mcg</item>
        <item>puff</item>
        <item>drop</item>
        <item>IU</item>
        <item>ml</item>

    </string-array>
    <string-array name="book_apporelation">
        <item>@string/lbl_self</item>
    </string-array>
    <string name="lbl_self">Self</string>
    <string-array name="rem_type">
        <item>@string/lbl_start_all</item>
        <item>@string/lbl_stop_all</item>
        <item>@string/lbl_stop_reminders</item>
        <item>@string/lbl_monthly</item>
        <item>@string/lbl_weekly</item>
        <item>@string/lbl_daily</item>
    </string-array>
    <string name="lbl_start_all">Start All</string>
    <string name="lbl_stop_all">Stop All</string>
    <string name="lbl_stop_reminders">Stop Reminders</string>
    <string name="lbl_monthly">Monthly</string>
    <string name="lbl_weekly">Weekly</string>
    <string name="lbl_daily">Daily</string>
    <string-array name="caretaker_relation">
        <item>@string/lbl_brother</item>
        <item>@string/lbl_sister</item>
        <item>@string/lbl_mother</item>
        <item>@string/lbl_father</item>
        <item>@string/lbl_grandfather</item>
        <item>@string/lbl_grandmother</item>
        <item>@string/lbl_son</item>
        <item>@string/lbl_daughter</item>
        <item>@string/lbl_friend</item>
        <item>@string/lbl_wife</item>
        <item>@string/lbl_husband</item>
        <item>@string/lbl_other</item>
    </string-array>
    <string name="lbl_brother">Brother</string>
    <string name="lbl_sister">Sister</string>
    <string name="lbl_mother">Mother</string>
    <string name="lbl_father">Father</string>
    <string name="lbl_grandfather">GrandFather</string>
    <string name="lbl_grandmother">GrandMother</string>
    <string name="lbl_son">Son</string>
    <string name="lbl_daughter">Daughter</string>
    <string name="lbl_friend">Friend</string>
    <string name="lbl_wife">Wife</string>
    <string name="lbl_husband">Husband</string>
    <string name="lbl_other">Other</string>
    <string-array name="call_sms">
        <item>@string/lbl_call</item>
        <item>@string/lbl_sms</item>
    </string-array>
    <string name="lbl_sms">sms</string>
    <string name="lbl_call">call</string>
    <string-array name="Language">
        <item>@string/lbl_english</item>
        <item>@string/lbl_gujarati</item>
        <item>@string/lbl_hindi</item>
    </string-array>
    <string name="lbl_english">English</string>
    <string name="lbl_gujarati">Gujarati</string>
    <string name="lbl_hindi">Hindi</string>
    <string-array name="contact_us_subjects">
        <item>@string/option_issue</item>
        <item>@string/option_report_content</item>
        <item>@string/option_sales_enquiry</item>
        <item>@string/option_support</item>
        <item>@string/option_Research</item>
        <item>@string/option_partnership</item>
    </string-array>
    <string name="option_issue">Issue</string>
    <string name="option_report_content">Report a content</string>
    <string name="option_sales_enquiry">Sales Enquiry</string>
    <string name="option_support">Support</string>
    <string name="option_Research">Research</string>
    <string name="option_partnership">Partnership</string>
    <string name="action_save">Save</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_pillbox">Pillbox</string>
    <string name="drawer_calendar">Health Calendar</string>
    <string name="drawer_vitals">Health Vitals</string>
    <string name="drawer_book_appointment">Book Appointment</string>
    <string name="drawer_health_records">My Health Records</string>
    <string name="drawer_caretaker">CareTakers</string>
    <string name="drawer_med_confirmation">Med Confirmation</string>
    <string name="drawer_notification">Notification</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_share_app">Share App</string>
    <string name="drawer_logout">LogOut</string>
    <string name="txt_online">Online</string>
    <string name="txt_feel_sad">SAD</string>
    <string name="txt_feel_ok">OK</string>
    <string name="txt_feel_satisfied">Satisfied</string>
    <string name="txt_feel_good">Good</string>
    <string name="txt_feel_awesome">Wow Awesome</string>
    <string name="txt_start_conversation">Start conversation</string>
    <string name="txt_time_horizon">Time horizone</string>
    <string name="txt_value">Value</string>
    <string name="txt_heart_risk">Heart Risk</string>
    <string name="txt_diabetes_risk">Diabetes Risk</string>
    <string name="txt_share_app_description">MobiHealth - 360 degree Health schedule management and care platform.</string>
    <string name="txt_select_clinic">Select Clinic</string>
    <string name="txt_audio_error">Audio error</string>
    <string name="txt_client_error">Client error</string>
    <string name="txt_insufficient_permission">Insufficient permissions</string>
    <string name="txt_network_error">Network error</string>
    <string name="txt_network_timeout">Network timeout</string>
    <string name="txt_no_voice_match">No match</string>
    <string name="txt_speech_recognizer_busy">Speech Recognizer is busy</string>
    <string name="txt_speech_recognizer_server_error">Server error</string>
    <string name="txt_speech_recognizer_no_input">No speech input</string>
    <string name="txt_speech_recognizer_not_understand_you">Speech Recognizer cannot understand you</string>
    <string name="txt_dialog_alert">Alert !</string>
    <string name="txt_dialog_you_will_loose_data">You will loose unsaved data !</string>
    <string name="txt_dialog_button_yes">Yes</string>
    <string name="txt_dialog_button_no">No</string>
    <string name="txt_dialog_confirm">Confirm !</string>
    <string name="txt_dialog_exit">Are sure you want to exit ?</string>
    <string name="txt_dialog_successful">Successful</string>
    <string name="txt_dialog_fail">Fail !</string>
    <string name="txt_dialog_successfully">Successfully</string>
    <string name="txt_dialog_failed_try_again">Failed, Try Again</string>
    <string name="txt_dialog_button_cancel">Cancel</string>
    <string name="txt_dialog_delete_confirmation">Are you sure you want to delete ?</string>
    <string name="txt_dialog_yes_do_it">Yes,do it!</string>
    <string name="txt_dialog_appointment_cancelled">Appointment Cancelled</string>
    <string name="txt_dialog_try_again">Try Again..</string>
    <string name="txt_dialog_reschedule_successfully">Reschedule Successfully</string>
    <string name="txt_dialog_reschedule_fail">Reschedule fail..</string>
    <string name="txt_dialog_replace_appointment">Replace Appointment</string>
    <string name="txt_dialog_want_to_replace_appointment">Do you want to replace the appointment?</string>
    <string name="txt_dialog_appointment_added">Appointment Added</string>
    <string name="txt_dialog_invalid_credentials">Invalid credentials</string>
    <string name="txt_doctor_name">Doctor Name</string>
    <string name="txt_apoointments_count_with_value">%1$s Appointments</string>
    <string name="txt_packages_count_with_value">%1$s Packages</string>
    <string name="txt_prescriptions_count_with_value">%1$s Prescriptions</string>
    <string name="txt_reports_count_with_value">%1$s Reports</string>
    <string name="txt_appointment_string_to_show_with_value">with %1$s for the appointment on %2$s</string>
    <string name="txt_cancel_appo_confirmation_with_value">You Want To Cancel your appointment with %1$s on %2$s</string>
    <string name="txt_dialog_your_vital_is_cond_with_value">Your %1$s is %2$s</string>
    <string name="txt_total_instruction_with_value">Total Instruction - %1$s</string>
    <string name="txt_instruction_followed_with_value">Instruction followed - %1$s</string>
    <string name="txt_feedback_date_with_value">Feedback Date* %1$s</string>
    <string name="txt_showing_pills_of_with_value">Your are showing pills of %1$s</string>
    <string name="txt_no_internet">No Internet Connection…@</string>
    <string name="error_give_valid_number">please give valid number !</string>
    <string name="error_enter_name">Please enter name !</string>
    <string name="error_fill_value">please fill value</string>
    <string name="txt_appointment_with">Appointment With</string>
    <string name="txt_finish_caps">FINISH</string>
    <string name="txt_book_appointments">Book Appointments</string>
    <string name="txt_loading">Loading . . .</string>
    <string name="txt_men">MEN</string>
    <string name="txt_diet_schedule">Diet Schedule</string>
    <string name="txt_message">Message</string>
    <string name="txt_calendar_details">Calendar Details</string>
    <string name="txt_no_emoji_available">No Emoji Available</string>
    <string name="txt_mobichat">MobiChat</string>
    <string name="txt_no_active_conversation">No active Conversation</string>
    <string name="txt_message_info">Message Info</string>
    <string name="txt_upadating_your_message">Upadating your message …!</string>
    <string name="txt_your_message_updated_successfully">Your Message updated Successfully !</string>
    <string name="txt_hii_there">Hii there</string>
    <string name="txt_description">Description</string>
    <string name="txt_share">Share</string>
    <string name="txt_have_a_lovely_day">Have a lovely day !!</string>
    <string name="txt_no_internet_connection">No Internet Connection</string>
    <string name="txt_please_check_your_internet_connection">Please check your internet connection</string>
    <string name="txt_try_again">try again</string>
    <string name="txt_view_more">View More..</string>
    <string name="hint_title">Title . . .</string>
    <string name="txt_www_mobihealth_in">www.mobihealth.in</string>
    <string name="food_information">Food Information</string>
    <string name="points_to_remember">POINTS TO REMEMBER</string>
    <string name="start_breastfeeding_immediately_after_birth_within_1_hour_baby_should_be_put_to_the_mother_s_breast">Start breastfeeding immediately after birth – within 1 hour. Baby should be put to the mother\'s breast.</string>
</resources>