<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cv_bc"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/hint_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:visibility="gone"
                android:paddingRight="@dimen/_5sdp"
                android:text="Ahmedabad - 10 Dec 2019"
                android:textColor="@color/Grey5"
                android:textSize="@dimen/_10ssp" />


            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_description"
                android:textColor="@color/Grey6"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/txt_www_mobihealth_in"
                android:textColor="@color/Grey5"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>