<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llDashboardTop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey2"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llMainDataView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpVerticalFeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />


        </LinearLayout>

        <!--<LinearLayout
            android:id="@+id/llDataLoadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="@dimen/big_height_bc0"
                android:layout_height="@dimen/big_height_bc0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pedding2"
                android:text="@string/txt_loading" />

        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/llDashboardNoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/hp_no_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/txt_have_a_lovely_day"
                android:textColor="@color/Blue5"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPricePlanNoInternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:gravity="center">


                <ImageView
                    android:layout_width="@dimen/big_height_bc2"
                    android:layout_height="@dimen/big_height_bc2"
                    android:src="@drawable/no_internet_connectionimg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pedding1"
                    android:gravity="center"
                    android:text="@string/txt_no_internet_connection"
                    android:textColor="@color/Grey8"
                    android:textSize="@dimen/labelfont4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pedding0"
                    android:gravity="center"
                    android:text="@string/txt_please_check_your_internet_connection"
                    android:textColor="@color/Grey5"
                    android:textSize="@dimen/labelfont3" />


                <TextView
                    android:id="@+id/btnInternetTryAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@drawable/theme_btn_background"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_30sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_30sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/txt_try_again"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/toolbar_home_layout"
            android:visibility="visible" />

        <!--<LinearLayout
            android:id="@+id/linear_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/white_rounded_corner_background"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/vBottomShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">



                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_share"
                    android:textColor="@color/theam_skycolor1"
                    android:textSize="@dimen/_11ssp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/vBottomView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/info_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_view_more"
                    android:textColor="@color/theam_skycolor1"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

        </LinearLayout>-->


        <LinearLayout
            android:id="@+id/linear_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/transparent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/vBottomShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    android:background="@drawable/white_circle_drawable"
                    android:elevation="@dimen/_4sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_share"
                        app:tint="@color/Grey8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/txt_share"
                        android:textColor="@color/theam_skycolor1"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/vBottomView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    android:background="@drawable/white_circle_drawable"
                    android:elevation="@dimen/_4sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <ImageView
                        android:scaleType="fitXY"
                        android:padding="@dimen/_2sdp"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_link_1" />

                    <TextView
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/txt_view_more"
                        android:textColor="@color/theam_skycolor1"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>